--- a/.gitignore
+++ b/.gitignore
@@ -15,7 +15,7 @@ build/
 out/
 !**/src/main/**/out/
 !**/src/test/**/out/
-
+Target/
 ### Eclipse ###
 .apt_generated
 .classpath
@@ -24,6 +24,7 @@ out/
 .settings
 .springBeans
 .sts4-cache
+*.pdf
 bin/
 !**/src/main/**/bin/
 !**/src/test/**/bin/
