--- a/build.gradle
+++ b/build.gradle
@@ -24,6 +24,9 @@ apply plugin: "net.serenity-bdd.serenity-gradle-plugin"
 sourceCompatibility = 1.8
 targetCompatibility = 1.8
 
+compileJava.options.encoding = "UTF-8"
+compileTestJava.options.encoding = "UTF-8"
+
 ext {
     slf4jVersion = '1.7.7'
     serenityCoreVersion = '3.3.2'
