--- a/serenity.properties
+++ b/serenity.properties
@@ -16,3 +16,12 @@ appium.app = C:\\Users\\sergio.rodriguezr_pr\\AndroidStudioProjects\\ICONNTest\\
 #appium.appActivity = com.oh4y0.iconn.MainActivity
 appium.newCommandTimeout = 1000
 
+
+####### iOS CAPS ######
+#appium.automationName=XCUITest
+#appium.platformName = iOS
+#appium.deviceName  = AutomationICONN
+#appium.app = Bundle Identifier que se encuentra en el integrationApp
+
+
+
